--- a/translations/br.json
+++ b/translations/br.json
@@ -15,6 +15,9 @@
   "SERVER_ERROR": "Erro ao processar a resposta do servidor.",
   "CUSTOMER_SERVICE": "ATENDIMENTO",
   "PRIVACY_POLICY": "POLÍTICA DE PRIVACIDADE",
+  "optin": "optin",
+  "make": "make",
+  "dealer_code": "dealer_code",
   "nome": "Nome Completo",
   "snome": "Sobrenome",
   "cel": "Celular (com DDD)",
