--- a/translations/pe.json
+++ b/translations/pe.json
@@ -16,6 +16,7 @@
   "CUSTOMER_SERVICE": "ATENCIÓN AL CLIENTE",
   "PRIVACY_POLICY": "POLÍTICA DE PRIVACIDAD",
   "nome": "Nombres Completos",
+  "optin": "optin",
   "snome": "Apellidos Completos",
   "cel": "Celular (con prefijo)",
   "email": "Correo Electrónico Principal",
